solution-card-component-add

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,4 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+/* 
 
 #root {
   max-width: 1280px;
@@ -43,4 +41,4 @@
 
 .read-the-docs {
   color: #888;
-}
+} */
